# SFML-Game-Demo

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
libs/ffmpeg/include/libavcodec/: avcodec.h
libs/ffmpeg/include/libavutil/: avutil.h  opt.h
libs/ffmpeg/include/libswresample/: swresample.h
src/: Defines.h  main.cpp  sfml-headers.h
src/core/: Enemy.h  EnemyManager.cpp  EnemyManager.h  GameCamera.cpp  GameCamera.h  GameData.cpp  GameData.h
src/entities/: Bullet.cpp  Bullet.h  LevelPortal.cpp  LevelPortal.h  Player.cpp  Player.h  Skeleton.cpp  Skeleton.h  Trader.cpp  Trader.h  enemyPortal.cpp  enemyPortal.h
src/funcs/: MainMenu.h  Mounting.h  VisualEffects.h
src/graphics/: Background.cpp  Background.h  Decoration.cpp  Decoration.h  Particle.cpp  Trail.cpp  Trail.h
src/headers/: sfml-headers.h
src/objects/: Background.cpp  Background.h  Bullet.cpp  Bullet.h  Decoration.cpp  Decoration.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Entity.cpp  Entity.h  GameData.cpp  GameData.h  GameLoadingScreen.h  GameTextures.cpp  GameTextures.h  Ground.cpp  Ground.h  HealthBar.h  LoadScreen.cpp  LoadScreen.h  Menu.cpp  Menu.h  Particle.cpp  Particle.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Skeleton.cpp  Skeleton.h  TexturesIterHelper.h  Trail.cpp  Trail.h
src/systems/: GameLevel.cpp  GameLevel.h  Ground.cpp  Ground.h  Interactive.h  Item.cpp  Item.h  LevelTask.cpp  LevelTask.h  Platform.cpp  Platform.h  Spawner.cpp  Spawner.h  TaskManager.h
src/ui/: AskDialogue.cpp  AskDialogue.h  ChooseDestination.cpp  ChooseDestination.h  ChooseDestinationMenu.cpp  ChooseDestinationMenu.h  GameLoadingScreen.cpp  GameLoadingScreen.h  HealthBar.h  LoadScreen.h  Menu.cpp  Menu.h  MenuBackground.cpp  MenuBackground.h  PlayerInventory.cpp  PlayerInventory.h  PlayerUI.cpp  PlayerUI.h  ScreenTransition.cpp  ScreenTransition.h  Shop.cpp  Shop.h
src/utils/: Mounting.h
